- Bugfix => grid view issue on click to expand/collapse

--- a/frontendapp/src/app/main/corporate-actions/dividends/dividends.component.scss
+++ b/frontendapp/src/app/main/corporate-actions/dividends/dividends.component.scss
@@ -6,6 +6,6 @@
   height: 100% !important;
 }
 
-::ng-deep .as-split-area {
-   overflow-y: hidden !important;
+.grid-height {
+  height: calc(100% - 84px) !important;
 }
